[package]
name = "coordinate"
version = "0.1.0"
edition = "2021"

[[example]]
name = "state_example"
path = "examples/state_example.rs"

[dependencies]
rand = "0.8.5"
rstar = "0.12.2"
axum = {version = "0.8.0",features = ["multipart"]}
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
